2007-10-26  Paolo Borelli  <pborelli@katamail.com>

	* libnautilus-private/nautilus-desktop-link.c: unref the icon instead
	of freeing it to avoid memory corruption.

2007-10-25  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-changes-queue.[ch]:
        * libnautilus-private/nautilus-monitor.c:
	Rename some file change queue functions to _by_uri
	add GFile based version with the original name
	
        * libnautilus-private/nautilus-file-operations.[ch]:
	Add gio based nautilus_file_operations_trash_or_delete() call.
	
        * src/file-manager/fm-directory-view.c:
	Call nautilus_file_operations_trash_or_delete()
	Remove unused code

2007-10-25  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-directory-view.[ch]:
	Make file activation handle mounting of mountables and non-mounted
	locations. Also general cleanup of activation.
	Cancellation not handled yet.

2007-10-25  Paolo Borelli  <pborelli@katamail.com>

	* src/file-manager/fm-list-view.c:
	* libnautilus-private/nautilus-icon-info.c:
	* libnautilus-private/nautilus-file.c:
	Plug some minor memory leaks.

2007-10-25  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-window-manage-view.c (location_has_really_changed):
	Fix a warning when switching view.

2007-10-25  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-application.c:
	* src/nautilus-property-browser.c:
	* src/nautilus-shell.c:

	Do not use EelStringList.

2007-10-24  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-file-management-properties.c:
	remove eel_string_list (ab)use.

2007-10-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
        * libnautilus-private/nautilus-vfs-file.c:
	Pass GMountOperation instead of parent to mount.
	Nothing for unmount/eject
	
        * src/file-manager/fm-directory-view.c:
	Pass in a mount operation for mount.
	Disable timeout when mount operation is active
